[gd_scene load_steps=30 format=3 uid="uid://spuh373xvf2p"]

[ext_resource type="Script" path="res://Entity/enemies/deadly_slime.gd" id="1_4oxr5"]
[ext_resource type="Texture2D" uid="uid://oqkvspfeuju4" path="res://Assets/SlimeMove.png" id="2_2dcx3"]
[ext_resource type="Texture2D" uid="uid://dhxul7chpd6nd" path="res://Assets/SlimeBlast-Sheet.png" id="3_vpf5j"]
[ext_resource type="PackedScene" uid="uid://bbeanc4v8nole" path="res://Entity/obstacles/dead_zone.tscn" id="6_th1cc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hshwq"]
size = Vector2(12, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_5rt3u"]
radius = 38.0132

[sub_resource type="AtlasTexture" id="AtlasTexture_dbnxv"]
atlas = ExtResource("2_2dcx3")
region = Rect2(0, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_r16ad"]
atlas = ExtResource("2_2dcx3")
region = Rect2(800, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc6gd"]
atlas = ExtResource("2_2dcx3")
region = Rect2(1600, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_iguca"]
atlas = ExtResource("2_2dcx3")
region = Rect2(2400, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_q12eb"]
atlas = ExtResource("2_2dcx3")
region = Rect2(3200, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvs1u"]
atlas = ExtResource("2_2dcx3")
region = Rect2(4000, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax7ct"]
atlas = ExtResource("2_2dcx3")
region = Rect2(4800, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsxkg"]
atlas = ExtResource("2_2dcx3")
region = Rect2(5600, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_te1fj"]
atlas = ExtResource("2_2dcx3")
region = Rect2(6400, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdjrx"]
atlas = ExtResource("2_2dcx3")
region = Rect2(0, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l7qy"]
atlas = ExtResource("2_2dcx3")
region = Rect2(800, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2kre"]
atlas = ExtResource("2_2dcx3")
region = Rect2(1600, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpkr8"]
atlas = ExtResource("2_2dcx3")
region = Rect2(2400, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq4kj"]
atlas = ExtResource("2_2dcx3")
region = Rect2(3200, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_62w3o"]
atlas = ExtResource("2_2dcx3")
region = Rect2(4000, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7wqc"]
atlas = ExtResource("2_2dcx3")
region = Rect2(4800, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3awce"]
atlas = ExtResource("2_2dcx3")
region = Rect2(5600, 0, 800, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eakh"]
atlas = ExtResource("2_2dcx3")
region = Rect2(6400, 0, 800, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_nj6x1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbnxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r16ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc6gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iguca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q12eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvs1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax7ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsxkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te1fj")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdjrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l7qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2kre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpkr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq4kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62w3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7wqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3awce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eakh")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ss8k6"]
size = Vector2(12, 8)

[sub_resource type="Animation" id="Animation_7hwj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/blast:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_13och"]
resource_name = "blast"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/blast:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_heo05"]
_data = {
"RESET": SubResource("Animation_7hwj4"),
"blast": SubResource("Animation_13och")
}

[node name="DeadlySlime" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_4oxr5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_hshwq")

[node name="BlastRange" type="Area2D" parent="."]
visible = false
position = Vector2(0, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastRange"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_5rt3u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.09, 0.09)
sprite_frames = SubResource("SpriteFrames_nj6x1")
animation = &"walk"
frame = 7
frame_progress = 0.577012
speed_scale = 0.3

[node name="blast" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(11.1111, 44.4444)
scale = Vector2(5, 5)
texture = ExtResource("3_vpf5j")
hframes = 12

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 8)
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)
collision_mask = 3

[node name="DeadZone" parent="." instance=ExtResource("6_th1cc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_ss8k6")

[node name="IdleTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_heo05")
}

[connection signal="body_entered" from="BlastRange" to="." method="_on_blast_range_body_entered"]
[connection signal="body_exited" from="BlastRange" to="." method="_on_blast_range_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
